--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polaroid Store</title>
     <style>
+        /* Basic Styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
         }
         header {
             background-color: #333;
@@ -18,51 +18,63 @@
             text-align: center;
         }
         nav {
-            background-color: #444;
+            background-color: #555;
             padding: 10px 0;
             text-align: center;
         }
-        nav a {
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+        nav ul li a {
             color: #fff;
             text-decoration: none;
-            margin: 0 10px;
-        }
-        nav a:hover {
-            text-decoration: underline;
         }
         .container {
             max-width: 1200px;
-            margin: 0 auto;
+            margin: auto;
             padding: 20px;
         }
+        /* Product Styles */
         .product {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid #ccc;
+            padding: 10px 0;
         }
-        .product-card {
-            background-color: #fff;
-            padding: 20px;
-            margin: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-        .product-card img {
-            max-width: 100%;
+        .product img {
+            max-width: 100px;
             height: auto;
-            border-radius: 5px;
         }
-        .btn {
-            background-color: #333;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
+        .product-info {
+            flex: 1;
+            margin-left: 20px;
         }
-        .btn:hover {
-            background-color: #555;
+        .product-info h3 {
+            margin: 0;
+        }
+        .product-info p {
+            margin: 5px 0;
+        }
+        /* Wishlist and Cart Styles */
+        .wishlist, .cart {
+            list-style-type: none;
+            padding: 0;
+        }
+        /* Reviews Styles */
+        .review {
+            border-bottom: 1px solid #ccc;
+            padding: 10px 0;
+        }
+        /* Contact Styles */
+        .contact {
+            text-align: center;
         }
     </style>
 </head>
@@ -71,59 +83,73 @@
         <h1>Polaroid Store</h1>
     </header>
     <nav>
-        <a href="#home">Home</a>
-        <a href="#product">Product</a>
-        <a href="#wishlist">Wishlist</a>
-        <a href="#cart">Shopping Cart</a>
-        <a href="#reviews">Reviews</a>
-        <a href="#contact">Contact Us</a>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#product">Product</a></li>
+            <li><a href="#wishlist">Wishlist</a></li>
+            <li><a href="#cart">Shopping Cart</a></li>
+            <li><a href="#reviews">Reviews</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+        </ul>
     </nav>
     <div class="container">
         <section id="home">
-            <h2>Welcome to Polaroid Store</h2>
-            <p>We offer a variety of polaroids in different sizes to capture your precious moments.</p>
+            <h2>Welcome to our Polaroid Store!</h2>
+            <p>We offer a variety of Polaroid sizes to capture your memories.</p>
         </section>
         <section id="product">
             <h2>Our Products</h2>
             <div class="product">
-                <div class="product-card">
-                    <img src="polaroid1.jpg" alt="Polaroid 1">
+                <img src="polaroid1.jpg" alt="Polaroid 1">
+                <div class="product-info">
                     <h3>Polaroid 1</h3>
-                    <p>$10</p>
-                    <button class="btn">Add to Wishlist</button>
-                    <button class="btn">Add to Cart</button>
+                    <p>Price: $10</p>
+                    <button onclick="addToWishlist('Polaroid 1')">Add to Wishlist</button>
+                    <button onclick="addToCart('Polaroid 1')">Add to Cart</button>
                 </div>
-                <div class="product-card">
-                    <img src="polaroid2.jpg" alt="Polaroid 2">
-                    <h3>Polaroid 2</h3>
-                    <p>$15</p>
-                    <button class="btn">Add to Wishlist</button>
-                    <button class="btn">Add to Cart</button>
-                </div>
-                <!-- Add more product cards here -->
             </div>
+            <!-- Add more products here -->
         </section>
         <section id="wishlist">
             <h2>Wishlist</h2>
-            <!-- Wishlist items will be dynamically populated here -->
+            <ul class="wishlist" id="wishlist-items"></ul>
         </section>
         <section id="cart">
             <h2>Shopping Cart</h2>
-            <!-- Shopping cart items will be dynamically populated here -->
+            <ul class="cart" id="cart-items"></ul>
         </section>
         <section id="reviews">
             <h2>Customer Reviews</h2>
-            <!-- Reviews will be displayed here -->
+            <div class="review">
+                <h3>Great Quality!</h3>
+                <p>This store has the best Polaroids. I love the quality of the pictures!</p>
+            </div>
+            <!-- Add more reviews here -->
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>Email: info@polaroidstore.com</p>
-            <p>Phone: 123-456-7890</p>
+            <div class="contact">
+                <p>Email: info@polaroidstore.com</p>
+                <p>Phone: 123-456-7890</p>
+            </div>
         </section>
     </div>
-
     <script>
-        // You can add JavaScript code here for any functionality you need
+        // Wishlist functionality
+        function addToWishlist(product) {
+            const wishlist = document.getElementById('wishlist-items');
+            const li = document.createElement('li');
+            li.textContent = product;
+            wishlist.appendChild(li);
+        }
+
+        // Cart functionality
+        function addToCart(product) {
+            const cart = document.getElementById('cart-items');
+            const li = document.createElement('li');
+            li.textContent = product;
+            cart.appendChild(li);
+        }
     </script>
 </body>
 </html>
