--- a/index.html
+++ b/index.html
@@ -7,147 +7,170 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: #f5f5f5;
     margin: 0;
     padding: 0;
-  }
-  nav {
-    background-color: #ffc0cb;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  nav a {
-    text-decoration: none;
     color: #333;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
   }
-  nav a:hover {
-    background-color: #ffb6c1;
+  .navbar {
+    background-color: #f0f0f0;
+    padding: 15px;
+  }
+  .navbar button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    margin-right: 15px;
   }
   .container {
     max-width: 1200px;
-    margin: 20px auto;
-    padding: 0 20px;
+    margin: 0 auto;
+    padding: 20px;
   }
   .product {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .product-item {
+    width: calc(25% - 20px);
+    margin-bottom: 20px;
     background-color: #fff;
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-  }
-  .product img {
-    max-width: 100%;
-    height: auto;
+    padding: 15px;
     border-radius: 5px;
-  }
-  .wishlist, .cart {
-    margin-top: 20px;
-  }
-  .review {
-    margin-bottom: 20px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   }
 </style>
 </head>
 <body>
-
-<nav>
-  <a href="#home">Home</a>
-  <a href="#product">Product</a>
-  <a href="#wishlist">Wishlist</a>
-  <a href="#cart">Shopping Cart</a>
-  <a href="#reviews">Reviews</a>
-  <a href="#contact">Contact Us</a>
-</nav>
-
-<div class="container">
-  <section id="home">
-    <h1>Welcome to Polaroid Store</h1>
-    <p>Explore our collection of charming polaroids and capture moments in style.</p>
-  </section>
-
-  <section id="product">
-    <h2>Our Products</h2>
+<div class="navbar">
+  <button onclick="showHome()">Home</button>
+  <button onclick="showProducts()">Products</button>
+  <button onclick="showWishlist()">Wishlist<span id="wishlistCount"></span></button>
+  <button onclick="showCart()">Shopping Cart<span id="cartCount"></span></button>
+  <button onclick="showReviews()">Reviews</button>
+  <button onclick="showContact()">Contact Us</button>
+</div>
+<div class="container" id="content">
+  <div id="home" style="display:none;">
+    <h1>About Polaroids</h1>
+    <p>Polaroids are instant cameras that produce self-developing photos. They are popular for their nostalgic appeal and unique photo output.</p>
+    <img src="polaroid1.jpg" alt="Polaroid 1">
+    <img src="polaroid2.jpg" alt="Polaroid 2">
+  </div>
+  <div id="products" style="display:none;">
+    <h1>Products</h1>
     <div class="product">
-      <img src="polaroid1.jpg" alt="Polaroid 1">
-      <p>Polaroid 1 - $25</p>
-      <button onclick="addToWishlist(1)">Add to Wishlist</button>
-      <button onclick="addToCart(1)">Add to Cart</button>
+      <div class="product-item">
+        <img src="product1.jpg" alt="Product 1">
+        <h2>Product 1</h2>
+        <p>$50</p>
+        <button onclick="addToWishlist('Product 1')">Add to Wishlist</button>
+        <button onclick="addToCart('Product 1')">Add to Cart</button>
+      </div>
+      <div class="product-item">
+        <img src="product2.jpg" alt="Product 2">
+        <h2>Product 2</h2>
+        <p>$60</p>
+        <button onclick="addToWishlist('Product 2')">Add to Wishlist</button>
+        <button onclick="addToCart('Product 2')">Add to Cart</button>
+      </div>
+      <div class="product-item">
+        <img src="product3.jpg" alt="Product 3">
+        <h2>Product 3</h2>
+        <p>$70</p>
+        <button onclick="addToWishlist('Product 3')">Add to Wishlist</button>
+        <button onclick="addToCart('Product 3')">Add to Cart</button>
+      </div>
+      <div class="product-item">
+        <img src="product4.jpg" alt="Product 4">
+        <h2>Product 4</h2>
+        <p>$80</p>
+        <button onclick="addToWishlist('Product 4')">Add to Wishlist</button>
+        <button onclick="addToCart('Product 4')">Add to Cart</button>
+      </div>
     </div>
-    <!-- Repeat similar product sections for other products -->
-  </section>
-
-  <section id="wishlist" class="wishlist">
-    <h2>Wishlist</h2>
-    <p id="wishlistCount">0 items wishlisted</p>
-    <!-- Wishlist items will be dynamically added here -->
-  </section>
-
-  <section id="cart" class="cart">
-    <h2>Shopping Cart</h2>
-    <!-- Cart items will be dynamically added here -->
-  </section>
-
-  <section id="reviews">
-    <h2>Customer Reviews</h2>
-    <div class="review">
-      <p>Great quality polaroids! Love them!</p>
-      <p>- Jane Doe</p>
-    </div>
-    <!-- More reviews will be dynamically added here -->
-  </section>
-
-  <section id="contact">
-    <h2>Contact Us</h2>
+  </div>
+  <div id="wishlist" style="display:none;">
+    <h1>Wishlist</h1>
+    <p>No items in wishlist</p>
+  </div>
+  <div id="cart" style="display:none;">
+    <h1>Shopping Cart</h1>
+    <p>No items in cart</p>
+  </div>
+  <div id="reviews" style="display:none;">
+    <h1>Customer Reviews</h1>
+    <p>No reviews yet</p>
+  </div>
+  <div id="contact" style="display:none;">
+    <h1>Contact Us</h1>
     <form>
-      <label for="name">Name:</label><br>
-      <input type="text" id="name" name="name"><br>
-      <label for="email">Email:</label><br>
-      <input type="email" id="email" name="email"><br>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name"><br><br>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email"><br><br>
       <label for="message">Message:</label><br>
-      <textarea id="message" name="message" rows="4" cols="50"></textarea><br>
+      <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
       <input type="submit" value="Submit">
     </form>
-  </section>
+  </div>
 </div>
 
 <script>
-  let wishlistItems = [];
-  let cartItems = [];
+  let wishlist = [];
+  let cart = [];
 
-  function addToWishlist(productId) {
-    wishlistItems.push(productId);
-    updateWishlistCount();
+  function showHome() {
+    hideAll();
+    document.getElementById('home').style.display = 'block';
   }
 
-  function addToCart(productId) {
-    cartItems.push(productId);
-    updateCart();
+  function showProducts() {
+    hideAll();
+    document.getElementById('products').style.display = 'block';
   }
 
-  function updateWishlistCount() {
-    const wishlistCount = document.getElementById('wishlistCount');
-    wishlistCount.textContent = wishlistItems.length + ' items wishlisted';
+  function showWishlist() {
+    hideAll();
+    document.getElementById('wishlist').style.display = 'block';
+    document.getElementById('wishlistCount').innerText = wishlist.length ? ` (${wishlist.length})` : '';
   }
 
-  function updateCart() {
-    const cartSection = document.getElementById('cart');
-    cartSection.innerHTML = '<h2>Shopping Cart</h2>';
-    cartItems.forEach(item => {
-      const productDiv = document.createElement('div');
-      productDiv.classList.add('product');
-      productDiv.innerHTML = `
-        <img src="polaroid${item}.jpg" alt="Polaroid ${item}">
-        <p>Polaroid ${item} - $25</p>
-      `;
-      cartSection.appendChild(productDiv);
-    });
+  function showCart() {
+    hideAll();
+    document.getElementById('cart').style.display = 'block';
+    document.getElementById('cartCount').innerText = cart.length ? ` (${cart.length})` : '';
+  }
+
+  function showReviews() {
+    hideAll();
+    document.getElementById('reviews').style.display = 'block';
+  }
+
+  function showContact() {
+    hideAll();
+    document.getElementById('contact').style.display = 'block';
+  }
+
+  function hideAll() {
+    document.getElementById('home').style.display = 'none';
+    document.getElementById('products').style.display = 'none';
+    document.getElementById('wishlist').style.display = 'none';
+    document.getElementById('cart').style.display = 'none';
+    document.getElementById('reviews').style.display = 'none';
+    document.getElementById('contact').style.display = 'none';
+  }
+
+  function addToWishlist(product) {
+    wishlist.push(product);
+    showWishlist();
+  }
+
+  function addToCart(product) {
+    cart.push(product);
+    showCart();
   }
 </script>
-
 </body>
 </html>
