--- a/index.html
+++ b/index.html
@@ -1,240 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Polaroid Store</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
-      margin: 0;
-      padding: 0;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Polaroid Store</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
 
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-    }
+        header {
+            background-color: #ffd6d6;
+            padding: 20px;
+            text-align: center;
+        }
 
-    header {
-      background-color: #89cff0;
-      padding: 10px;
-    }
+        nav {
+            background-color: #ff9999;
+            text-align: center;
+            padding: 10px;
+        }
 
-    nav {
-      text-align: center;
-      margin-top: 20px;
-    }
+        nav a {
+            text-decoration: none;
+            color: #333;
+            margin: 0 10px;
+        }
 
-    nav a {
-      text-decoration: none;
-      color: #333;
-      padding: 10px 20px;
-      border-radius: 5px;
-      background-color: #f0f0f0;
-      margin: 0 5px;
-    }
+        section {
+            padding: 20px;
+        }
 
-    nav a:hover {
-      background-color: #ccc;
-    }
-
-    section {
-      padding: 20px;
-    }
-
-    .product {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-    }
-
-    .product-card {
-      width: 200px;
-      margin-bottom: 20px;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .product-card img {
-      width: 100%;
-      border-radius: 5px;
-    }
-
-    .product-card h3 {
-      margin-top: 10px;
-      font-size: 18px;
-    }
-
-    .product-card p {
-      margin-top: 5px;
-      font-size: 16px;
-    }
-
-    .btn {
-      display: inline-block;
-      padding: 5px 10px;
-      background-color: #89cff0;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .btn:hover {
-      background-color: #6fbde8;
-    }
-
-    footer {
-      background-color: #89cff0;
-      text-align: center;
-      padding: 20px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
+        footer {
+            background-color: #ffd6d6;
+            padding: 10px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>Polaroid Store</h1>
-      <nav>
+    <header>
+        <h1>Welcome to our Polaroid Store</h1>
+    </header>
+
+    <nav>
         <a href="#home">Home</a>
         <a href="#product">Product</a>
         <a href="#wishlist">Wishlist</a>
         <a href="#cart">Shopping Cart</a>
         <a href="#reviews">Reviews</a>
         <a href="#contact">Contact Us</a>
-      </nav>
-    </div>
-  </header>
+    </nav>
 
-  <section id="home">
-    <div class="container">
-      <h2>About Polaroids</h2>
-      <p>Polaroids are instant cameras that produce self-developing photos. They offer a unique and nostalgic way to capture moments.</p>
-      <div class="images">
-        <img src="polaroid1.jpg" alt="Polaroid 1">
-        <img src="polaroid2.jpg" alt="Polaroid 2">
-        <img src="polaroid3.jpg" alt="Polaroid 3">
-      </div>
-    </div>
-  </section>
+    <section id="home">
+        <h2>About Polaroids</h2>
+        <p>Polaroids are instant cameras that produce self-developing photos. They are known for their vintage aesthetic and instant gratification.</p>
+        <img src="polaroid.jpg" alt="Polaroid Camera">
+    </section>
 
-  <section id="product">
-    <div class="container">
-      <h2>Our Products</h2>
-      <div class="product">
-        <div class="product-card">
-          <img src="product1.jpg" alt="Product 1">
-          <h3>Classic Polaroid</h3>
-          <p>$50</p>
-          <button class="btn add-to-wishlist">Add to Wishlist</button>
-          <button class="btn add-to-cart">Add to Cart</button>
+    <section id="product">
+        <h2>Our Products</h2>
+        <div class="product">
+            <img src="polaroid1.jpg" alt="Polaroid 1">
+            <p>Polaroid 1 - $50</p>
+            <button onclick="addToCart(1)">Add to Cart</button>
+            <button onclick="addToWishlist(1)">Add to Wishlist</button>
         </div>
-        <div class="product-card">
-          <img src="product2.jpg" alt="Product 2">
-          <h3>Colorful Polaroid</h3>
-          <p>$60</p>
-          <button class="btn add-to-wishlist">Add to Wishlist</button>
-          <button class="btn add-to-cart">Add to Cart</button>
+        <div class="product">
+            <img src="polaroid2.jpg" alt="Polaroid 2">
+            <p>Polaroid 2 - $60</p>
+            <button onclick="addToCart(2)">Add to Cart</button>
+            <button onclick="addToWishlist(2)">Add to Wishlist</button>
         </div>
-        <div class="product-card">
-          <img src="product3.jpg" alt="Product 3">
-          <h3>Vintage Polaroid</h3>
-          <p>$70</p>
-          <button class="btn add-to-wishlist">Add to Wishlist</button>
-          <button class="btn add-to-cart">Add to Cart</button>
+        <div class="product">
+            <img src="polaroid3.jpg" alt="Polaroid 3">
+            <p>Polaroid 3 - $70</p>
+            <button onclick="addToCart(3)">Add to Cart</button>
+            <button onclick="addToWishlist(3)">Add to Wishlist</button>
         </div>
-        <div class="product-card">
-          <img src="product4.jpg" alt="Product 4">
-          <h3>Modern Polaroid</h3>
-          <p>$80</p>
-          <button class="btn add-to-wishlist">Add to Wishlist</button>
-          <button class="btn add-to-cart">Add to Cart</button>
+        <div class="product">
+            <img src="polaroid4.jpg" alt="Polaroid 4">
+            <p>Polaroid 4 - $80</p>
+            <button onclick="addToCart(4)">Add to Cart</button>
+            <button onclick="addToWishlist(4)">Add to Wishlist</button>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="wishlist">
-    <div class="container">
-      <h2>Wishlist</h2>
-      <p>Total Items: <span id="wishlist-count">0</span></p>
-      <div id="wishlist-items"></div>
-    </div>
-  </section>
+    <section id="wishlist">
+        <h2>Wishlist</h2>
+        <p id="wishlistCount">0 items wishlisted</p>
+        <ul id="wishlistItems">
+            <!-- Wishlist items will be dynamically added here -->
+        </ul>
+    </section>
 
-  <section id="cart">
-    <div class="container">
-      <h2>Shopping Cart</h2>
-      <div id="cart-items"></div>
-    </div>
-  </section>
+    <section id="cart">
+        <h2>Shopping Cart</h2>
+        <ul id="cartItems">
+            <!-- Cart items will be dynamically added here -->
+        </ul>
+    </section>
 
-  <section id="reviews">
-    <div class="container">
-      <h2>Customer Reviews</h2>
-      <p>No reviews yet.</p>
-    </div>
-  </section>
+    <section id="reviews">
+        <h2>Customer Reviews</h2>
+        <ul>
+            <li>Great polaroid selection!</li>
+            <li>Fast shipping, very happy!</li>
+            <li>Excellent customer service</li>
+        </ul>
+    </section>
 
-  <section id="contact">
-    <div class="container">
-      <h2>Contact Us</h2>
-      <form id="contact-form">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br>
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br>
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="4" required></textarea><br>
-        <button type="submit" class="btn">Submit</button>
-      </form>
-    </div>
-  </section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <form>
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name" required><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" required><br>
+            <label for="message">Message:</label><br>
+            <textarea id="message" name="message" rows="4" cols="50" required></textarea><br>
+            <button type="submit">Submit</button>
+        </form>
+    </section>
 
-  <footer>
-    <p>&copy; 2024 Polaroid Store. All rights reserved.</p>
-  </footer>
+    <footer>
+        <p>&copy; 2024 Polaroid Store. All rights reserved.</p>
+    </footer>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      // Dummy function to simulate adding to wishlist
-      const addToWishlistButtons = document.querySelectorAll('.add-to-wishlist');
-      addToWishlistButtons.forEach(button => {
-        button.addEventListener('click', function() {
-          const countElement = document.getElementById('wishlist-count');
-          let count = parseInt(countElement.innerText);
-          count++;
-          countElement.innerText = count;
+    <script>
+        let wishlist = [];
+        let cart = [];
 
-          const productName = this.parentElement.querySelector('h3').innerText;
-          const wishlistItems = document.getElementById('wishlist-items');
-          const item = document.createElement('p');
-          item.innerText = productName;
-          wishlistItems.appendChild(item);
-        });
-      });
+        function addToWishlist(productId) {
+            wishlist.push(productId);
+            updateWishlist();
+        }
 
-      // Dummy function to simulate adding to cart
-      const addToCartButtons = document.querySelectorAll('.add-to-cart');
-      addToCartButtons.forEach(button => {
-        button.addEventListener('click', function() {
-          const productName = this.parentElement.querySelector('h3').innerText;
-          const cartItems = document.getElementById('cart-items');
-          const item = document.createElement('p');
-          item.innerText = productName;
-          cartItems.appendChild(item);
-        });
-      });
-    });
-  </script>
+        function addToCart(productId) {
+            cart.push(productId);
+            updateCart();
+        }
+
+        function updateWishlist() {
+            let wishlistCount = document.getElementById('wishlistCount');
+            wishlistCount.textContent = wishlist.length + ' items wishlisted';
+
+            let wishlistItems = document.getElementById('wishlistItems');
+            wishlistItems.innerHTML = '';
+            wishlist.forEach(productId => {
+                let li = document.createElement('li');
+                li.textContent = 'Polaroid ' + productId;
+                wishlistItems.appendChild(li);
+            });
+        }
+
+        function updateCart() {
+            let cartItems = document.getElementById('cartItems');
+            cartItems.innerHTML = '';
+            cart.forEach(productId => {
+                let li = document.createElement('li');
+                li.textContent = 'Polaroid ' + productId;
+                cartItems.appendChild(li);
+            });
+        }
+    </script>
 </body>
 </html>
